<resources>
    <string name="app_name">EuroProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nomeCollezione">Nome collezione </string>
    <string name="inserisciNome">Inserisci il nome  </string>
    <string name="note">Note (opzionale):  </string>
    <string name="tipoCollezione"> Tipo   </string>
    <string name="crea"> Aggiungi </string>
    <string name="annulla"> Annulla </string>
    <string name="anno"> Anno* (dal 1999) </string>
    <string name="taglio"> Taglio </string>
    <string name="paese"> Paese* </string>
    <string name="caricaFoto"> Carica foto </string>
    <string name="materiale"> Descrizione* </string>
    <string name="noElement">Nessun elemento trovato </string>
    <string name="addedCoin">Moneta aggiunta </string>
    <string name="perTaglio">Per taglio </string>
    <string name="erroreCampiCoin"> "Completa tutte le richieste correttamente" </string>

    <string-array name="spinner_db_types">
        <item> - </item>
        <item> Classica </item>
        <item> Memoriale </item>
    </string-array>
    <string-array name="spinner_taglio">
        <item> 0.01 </item>
        <item> 0.02 </item>
        <item> 0.05 </item>
        <item> 0.10 </item>
        <item> 0.20 </item>
        <item> 0.50  </item>
        <item> 1.00  </item>
        <item> 2.00  </item>
    </string-array>

    <string-array name="spinner_anno">
        <item> 1999 </item>
        <item> 2000 </item>
        <item> 2001 </item>
        <item> 2002 </item>
        <item> 2003 </item>
        <item> 2004  </item>
        <item> 2005  </item>
        <item> 2006  </item>
        <item> 2007  </item>
        <item> 2008  </item>
        <item> 2009  </item>
        <item> 2010  </item>
        <item> 2011  </item>
        <item> 2012  </item>
        <item> 2013  </item>
        <item> 2014  </item>
        <item> 2015  </item>
        <item> 2016  </item>
        <item> 2017  </item>
        <item> 2018  </item>
        <item> 2019  </item>
        <item> 2020  </item>
        <item> 2021  </item>
        <item> 2022  </item>
    </string-array>

    <string name="perpaese"> Per paese </string>
    <string name="peranno"> Per anno </string>
    <string name="allMonete"> Tutte </string>
    <string name="cerca"> Cerca </string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="TitoloBarCollezione">Collezione: </string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="spinner_paesi">
        <item>Austria</item>
        <item>Belgio</item>
        <item>Cipro</item>
        <item>Estonia</item>
        <item>Finlandia</item>
        <item>Francia</item>
        <item>Germania</item>
        <item>Grecia</item>
        <item>Irlanda</item>
        <item>Italia</item>
        <item>Lettonia</item>
        <item>Lituania</item>
        <item>Lussemburgo</item>
        <item>Malta</item>
        <item>Paesi Bassi</item>
        <item>Portogallo</item>
        <item>Slovacchia</item>
        <item>Slovenia</item>
        <item>Spagna</item>
    </string-array>
    <string name="title_activity_view_coins">ViewCoins</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>