<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddCollection">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/nomeCollezione"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/nomeCollezione"
            android:textSize="18sp"
            android:textAlignment="center"

           />


        <EditText
            android:id="@+id/editNomeCollezione"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="58dp"
            android:ems="10"
            android:hint="@string/inserisciNome"
            android:inputType="textPersonName"
            android:visibility="visible"
            android:layout_marginBottom="30dp"
            />



        <TextView
            android:id="@+id/tipoCollezione"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/tipoCollezione"
            android:textSize="18sp"
            android:textAlignment="center"
            />

        <Spinner
            android:id="@+id/spinnerTipoCollezione"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:dropDownWidth="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            />



        <TextView
            android:id="@+id/ViewNote"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/note"
            android:textSize="18sp"
            android:textAlignment="center"
             />

        <EditText
            android:id="@+id/editTextNote"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:layout_marginBottom="50dp"/>

        <Button
            android:backgroundTint="@color/greyVariant"
            android:id="@+id/buttonCreaCollezione"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/crea"
            android:layout_marginBottom="40dp"
           />


    </LinearLayout>
</ScrollView>