<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainCoin"
    android:background="@android:color/darker_gray"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="6dp">

                <TextView
                    android:id="@+id/textViewManicoin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:fontFamily="serif-monospace"
                    android:lineSpacingExtra="20sp"
                    android:padding="40dp"
                    android:text="My collection\nN° di monete : 50"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="20dp"
                    android:textStyle="bold|italic" />
            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.AppCompatButton

                android:background="@drawable/bottone_arrotonadato"
                android:id="@+id/buttonAllCoin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/ic_my_search"
                android:paddingLeft="120dp"
                android:drawablePadding="-120dp"
                android:text="@string/allMonete" />

            <androidx.appcompat.widget.AppCompatButton

                android:background="@drawable/bottone_arrotonadato"
                android:id="@+id/buttonPerTaglio"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"

                android:drawableLeft="@drawable/ic_my_search"
                android:paddingLeft="120dp"
                android:drawablePadding="-110dp"

                android:text="@string/perTaglio" />

            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/bottone_arrotonadato"
                android:id="@+id/buttonPerPaese"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/ic_my_search"
                android:paddingLeft="120dp"
                android:drawablePadding="-110dp"
                android:text="@string/perpaese" />

            <androidx.appcompat.widget.AppCompatButton

                android:background="@drawable/bottone_arrotonadato"
                android:id="@+id/buttonPerAnno"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/ic_my_search"
                android:paddingLeft="120dp"
                android:drawablePadding="-110dp"

                android:text="@string/peranno" />


        </LinearLayout>
    </ScrollView>




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/toaddcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:srcCompat="@android:drawable/ic_input_add" />





</androidx.constraintlayout.widget.ConstraintLayout>




